<resources>
    <string name="app_name">HabitSmasher</string>
    <string name="title_today">Today</string>
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_label">Title:</string>
    <string name="reason_label">Reason:</string>
    <string name="date_label">Date:</string>
    <string name="habit_title">Habit title</string>
    <string name="habit_reason">Habit reason</string>
    <string name="habit_event_comment">Comment</string>
    <string name="habit_event_date">Date</string>
    <string name="habit_date">Habit date</string>
    <string name="habit_list">Habit List</string>
    <string name="dd_mm_yyyy">dd-mm-yyyy</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_button">CANCEL</string>
    <string name="name">Name:</string>
    <string name="reason">Reason:</string>
    <string name="date_start">Date start:</string>
    <string name="date">Date:</string>
    <string name="add_habit">Add Habit</string>
    <string name="add_habit_event">Add Habit Event</string>
    <string name="habit_event_comment_label">Comment:</string>
    <string name="add_habit_event_comment">Enter Comment...</string>
    <string name="add_habit_event_location_label">ADD LOCATION</string>
    <string name="add_habit_photo_label">ADD PHOTO</string>
    <string name="historyButtonLabel">HISTORY</string>
    <string name="dateTextBoxLabel">Date Started: %s</string>
    <string name="ratingTextBoxLabel">Follow Rating: %s</string>
    <string name="descriptionTextBoxLabel">Description…</string>
    <string name="profile">Profile</string>
    <string name="username">username</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="zero">0</string>
    <string name="no_recent_activity">No recent activity!</string>
    <string name="edit_button_label">EDIT</string>
    <string name="delete_button_label">DELETE</string>
    <string name="edit_habit">Edit Habit</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="email">Email</string>
    <string name="habit_smasher_header">HabitSmasher</string>
    <string name="login">Login</string>
    <string name="go_back">Go back</string>
    <string name="username_capitalU">Username</string>
    <string name="view_event_date_label">DATE OF EVENT</string>
    <string name="view_event_comment_label">COMMENT</string>
    <string name="view_event_location_label">LOCATION</string>
    <string name="public_habit">Public</string>
    <string name="private_habit">Private</string>
    <string name="home_day">null</string>
    <string name="home_welcome_message">Today will be a good day.</string>
    <string name="home_habit_header">Today\'s Habits</string>
    <string name="home_new_event">Add Event</string>
    <string name="forgot_password_message_dialog">Please enter your email</string>
    <string name="follow_user">Follow User</string>
    <string name="follow">Follow</string>
    <string name="google">Google</string>
    <string name="camera_picture_button">TAKE PICTURE</string>
    <string name="gallery_picture_button">FROM GALLERY</string>
    <string name="user_search">User Search</string>
    <string name="logout">Logout</string>
    <string name="editLocation">EDIT LOCATION</string>
    <string name="no_progress">0%</string>
    <string name="Notifications">Notifications</string>
    <string name="Accept">Accept</string>
    <string name="Deny">Deny</string>
    <string name="date_started">Date started</string>
    <string name="days_due">Days due</string>
    <string name="privacy">Privacy</string>
    <string name="event_history">Event History</string>
    <string name="th">Th</string>
    <string name="we">We</string>
    <string name="tu">Tu</string>
    <string name="mo">Mo</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="su">Su</string>
    <string name="unfollow_label">UNFOLLOW</string>
    <string name="confirm_delete_user_text">Delete Profile?</string>
</resources>