<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.habitsmasher.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.habitsmasher.ui.dashboard.HabitListFragment"
        android:label="@string/habit_list"
        tools:layout="@layout/fragment_habit_list" >
        <action
            android:id="@+id/action_navigation_dashboard_to_habitViewFragment"
            app:destination="@id/habitViewFragment"
            app:popUpTo="@id/navigation_dashboard"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.habitsmasher.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/habitViewFragment"
        android:name="com.example.habitsmasher.ui.dashboard.HabitViewFragment"
        android:label="HabitViewFragment" />
</navigation>