<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/habit_add_button">

    <TextView
        android:id="@+id/forgot_password_header"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgot_password_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/forgot_password_message_dialog"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/forgot_password_header"
        app:layout_constraintStart_toStartOf="@+id/forgot_password_header"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_header" />

    <EditText
        android:id="@+id/reset_password_dialog"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_message" />

    <Button
        android:id="@+id/reset_password_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="25dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="@+id/reset_password_dialog"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>