<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/habit_add_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/habit_title_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="habit"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/habit_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/habit_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/add_habit_header"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/habit_reason_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="reason"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/habit_reason"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/habit_title_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/habit_title_edit_text"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/confirm_habit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/habit_list_text"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/habit_date_selection" />

    <Button
        android:id="@+id/cancel_habit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="16dp"
        android:background="@color/habit_list_text"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/confirm_habit" />

    <TextView
        android:id="@+id/habit_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/habit_title_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/habit_title_edit_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/habit_title_edit_text" />

    <TextView
        android:id="@+id/habit_reason_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reason"
        app:layout_constraintBottom_toBottomOf="@+id/habit_reason_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/habit_reason_edit_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/habit_name_text_view"
        app:layout_constraintTop_toTopOf="@+id/habit_reason_edit_text" />

    <TextView
        android:id="@+id/habit_date_text_view"
        android:layout_width="70dp"
        android:layout_height="24dp"
        android:text="@string/date_start"
        app:layout_constraintBottom_toBottomOf="@+id/habit_date_selection"
        app:layout_constraintEnd_toStartOf="@+id/habit_date_selection"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/habit_reason_text_view"
        app:layout_constraintTop_toTopOf="@+id/habit_date_selection" />

    <TextView
        android:id="@+id/add_habit_header"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:text="@string/add_habit"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/habit_date_selection"
        android:layout_width="208dp"
        android:layout_height="27dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:background="@color/white"
        android:clickable="true"
        android:hint="@string/habit_date"
        android:onClick="onClick"
        android:textColor="@color/grey"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/habit_reason_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/habit_reason_edit_text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="132dp"
        android:layout_height="23dp"
        android:layout_marginTop="24dp"
        android:text="Weekly Schedule"
        app:layout_constraintStart_toStartOf="@+id/habit_date_text_view"
        app:layout_constraintTop_toBottomOf="@+id/habit_date_text_view" />

    <Button
        android:id="@+id/monday_button"
        style="@style/day_button"
        android:layout_width="56dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:autoSizeMaxTextSize="30dp"
        android:autoSizeMinTextSize="8dp"
        android:autoSizeStepGranularity="2dp"
        android:autoSizeTextType="uniform"
        android:text="Mo"
        app:iconPadding="0dp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/monday_button2"
        style="@style/day_button"
        android:layout_width="56dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:autoSizeMaxTextSize="30dp"
        android:autoSizeMinTextSize="8dp"
        android:autoSizeStepGranularity="2dp"
        android:autoSizeTextType="uniform"
        android:text="Mo"
        app:layout_constraintStart_toEndOf="@+id/monday_button"
        app:layout_constraintTop_toTopOf="@+id/monday_button" />

</androidx.constraintlayout.widget.ConstraintLayout>