<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="93dp"
        android:layout_height="92dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/placeholder_profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        tools:layout_editor_absoluteY="24dp" />

    <TextView
        android:id="@+id/followers_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/following_label"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toTopOf="@+id/following_label" />

    <TextView
        android:id="@+id/following_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/following"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/profile_picture"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/number_followers"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/text_button_background_white"
        android:text="@string/zero"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/followers_label"
        app:layout_constraintEnd_toEndOf="@+id/followers_label"
        app:layout_constraintStart_toStartOf="@+id/followers_label"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/number_following"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/zero"
        android:background="@drawable/text_button_background_white"
        app:layout_constraintBottom_toTopOf="@+id/following_label"
        app:layout_constraintEnd_toEndOf="@+id/following_label"
        app:layout_constraintStart_toStartOf="@+id/following_label"
        app:layout_constraintTop_toBottomOf="@+id/username" />

</androidx.constraintlayout.widget.ConstraintLayout>